--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,13 @@
+setenv -g TMUX_PLUGIN_MANAGER_PATH "$HOME/.tmux/plugins/"
+
 set-option -sa terminal-overrides ",xterm*:Tc"
 
+set -g mouse on
 set -s escape-time 0
 
 unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
+set -g prefix C-a
+bind C-a send-prefix
 
 set -g base-index 1
 set -g pane-base-index 1
