Set status bar on top

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,6 +9,12 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
+set -g status-justify left
+set -g status-left-length 200
+set -g status-right-length 200
+
+set -g status-position top
+
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
